crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__record__tests__empty.snap
---
source: crates/nash-parse/src/pattern/record.rs
description: "Code:\n\n{}"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Record(
        [],
    ),
}
