crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__record__tests__error_unclosed.snap
---
source: crates/nash-parse/src/pattern/record.rs
description: "Code:\n\n{ x, y"
---
Record(
    End(
        1,
        7,
    ),
    1,
    1,
)
