crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__record__tests__multiple.snap
---
source: crates/nash-parse/src/pattern/record.rs
description: "Code:\n\n{ x, y, z }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Record(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                value: "x",
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 7,
                    },
                },
                value: "y",
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: "z",
            },
        ],
    ),
}
