crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__record__tests__single.snap
---
source: crates/nash-parse/src/pattern/record.rs
description: "Code:\n\n{ x }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Record(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                value: "x",
            },
        ],
    ),
}
